[workspace]
members = ["config", "config-derive", "errors", "id", "instruments"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
colored = "2.1"
config-driver = { package = "config", version = "0.14" }
darling = "0.20"
http = "0.2"
opentelemetry = "0.23"
opentelemetry_sdk = "0.23"
opentelemetry-appender-tracing = "0.4"
opentelemetry-otlp = "0.16"
opentelemetry-semantic-conventions = "0.15"
opentelemetry-stdout = "0.4"
paste = "1.0"
percent-encoding = "2.3"
quote = "1.0"
rand = "0.8"
serde = "1.0"
syn = "2.0"
thiserror = "1.0"
tower-http = "0.4"
tracing = "0.1.28"
tracing-opentelemetry = "0.24"
tracing-subscriber = "0.3"

# Internal dependencies
config = { path = "config" }
config-derive = { path = "config-derive" }
errors = { path = "errors" }
instruments = { path = "instruments" }
